--- a/Rides/View/Base.lproj/Main.storyboard
+++ b/Rides/View/Base.lproj/Main.storyboard
@@ -20,19 +20,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5TJ-jY-kT1" userLabel="MainStack">
-                                <rect key="frame" x="15" y="118" width="363" height="700"/>
+                                <rect key="frame" x="15" y="118" width="363" height="690"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="d8n-iL-EFL" userLabel="TextfieldStack">
-                                        <rect key="frame" x="0.0" y="0.0" width="363" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="363" height="34"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Num to Query" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LGD-Xc-chW">
-                                                <rect key="frame" x="0.0" y="0.0" width="312.33333333333331" height="34.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="312.33333333333331" height="34"/>
                                                 <color key="backgroundColor" systemColor="systemFillColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IOA-XJ-S5I">
-                                                <rect key="frame" x="313.33333333333331" y="0.0" width="49.666666666666686" height="34.333333333333336"/>
+                                                <rect key="frame" x="313.33333333333326" y="0.0" width="49.666666666666742" height="34"/>
                                                 <color key="tintColor" systemColor="labelColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system"/>
@@ -40,25 +40,25 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="46" translatesAutoresizingMaskIntoConstraints="NO" id="8ml-4Z-Hpt">
-                                        <rect key="frame" x="0.0" y="54.333333333333343" width="363" height="33.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="54" width="363" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Vehicle List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bti-uN-1x3">
-                                                <rect key="frame" x="0.0" y="0.0" width="158.66666666666666" height="33.666666666666664"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="158.66666666666666" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tlN-Dl-Isx">
-                                                <rect key="frame" x="204.66666666666663" y="0.0" width="158.33333333333337" height="33.666666666666664"/>
+                                                <rect key="frame" x="204.66666666666663" y="0.0" width="158.33333333333337" height="30"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort By:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5rU-4S-sKI">
-                                                        <rect key="frame" x="0.0" y="0.0" width="69" height="33.666666666666664"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort By:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5rU-4S-sKI">
+                                                        <rect key="frame" x="0.0" y="0.0" width="69" height="30"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="odJ-XK-ZEu">
-                                                        <rect key="frame" x="89.000000000000028" y="0.0" width="69.333333333333343" height="33.666666666666664"/>
+                                                        <rect key="frame" x="89.000000000000028" y="0.0" width="69.333333333333343" height="30"/>
                                                         <menu key="menu" id="oit-Xl-QD3">
                                                             <children>
                                                                 <command title="Item 1" id="fxL-M9-JhR"/>
@@ -72,7 +72,7 @@
                                         </subviews>
                                     </stackView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="E3Y-WG-kj0">
-                                        <rect key="frame" x="0.0" y="108" width="363" height="592"/>
+                                        <rect key="frame" x="0.0" y="104" width="363" height="586"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </tableView>
                                 </subviews>
@@ -91,12 +91,13 @@
                         <constraints>
                             <constraint firstItem="5TJ-jY-kT1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="9Ph-0u-YQB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5TJ-jY-kT1" secondAttribute="trailing" constant="15" id="I2M-jZ-peW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5TJ-jY-kT1" secondAttribute="bottom" id="dMV-Br-Gih"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5TJ-jY-kT1" secondAttribute="bottom" constant="10" id="dMV-Br-Gih"/>
                             <constraint firstItem="5TJ-jY-kT1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="ko2-cU-LlN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Rides" id="7dT-JG-66Y"/>
                     <connections>
+                        <outlet property="tableView" destination="E3Y-WG-kj0" id="OTv-nI-9Mx"/>
                         <segue destination="u5E-hd-dlh" kind="show" identifier="goToDetail" id="Tyk-51-vns"/>
                     </connections>
                 </viewController>
@@ -113,10 +114,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SJf-VH-dcJ">
-                                <rect key="frame" x="15" y="118" width="363" height="700"/>
+                                <rect key="frame" x="15" y="118" width="363" height="690"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="j3Q-Eo-lGc">
-                                        <rect key="frame" x="22" y="215.33333333333329" width="319.33333333333331" height="269.66666666666674"/>
+                                        <rect key="frame" x="22" y="210.33333333333326" width="319.33333333333331" height="269.66666666666674"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you see thie message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFv-W3-hWb">
                                                 <rect key="frame" x="0.0" y="0.0" width="281.33333333333331" height="33.666666666666664"/>
@@ -157,7 +158,7 @@
                         <constraints>
                             <constraint firstItem="GbF-6m-qfw" firstAttribute="trailing" secondItem="SJf-VH-dcJ" secondAttribute="trailing" constant="15" id="RB4-oC-9Vt"/>
                             <constraint firstItem="SJf-VH-dcJ" firstAttribute="leading" secondItem="GbF-6m-qfw" secondAttribute="leading" constant="15" id="Ydf-Zg-HHu"/>
-                            <constraint firstItem="GbF-6m-qfw" firstAttribute="bottom" secondItem="SJf-VH-dcJ" secondAttribute="bottom" id="ded-KO-kH6"/>
+                            <constraint firstItem="GbF-6m-qfw" firstAttribute="bottom" secondItem="SJf-VH-dcJ" secondAttribute="bottom" constant="10" id="ded-KO-kH6"/>
                             <constraint firstItem="SJf-VH-dcJ" firstAttribute="top" secondItem="GbF-6m-qfw" secondAttribute="top" constant="15" id="wDL-DL-v4Y"/>
                         </constraints>
                     </view>
