--- a/Rides/View/Base.lproj/Main.storyboard
+++ b/Rides/View/Base.lproj/Main.storyboard
@@ -32,10 +32,13 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IOA-XJ-S5I">
-                                                <rect key="frame" x="313.33333333333326" y="0.0" width="49.666666666666742" height="34"/>
+                                                <rect key="frame" x="313.33333333333331" y="0.0" width="49.666666666666686" height="34"/>
                                                 <color key="tintColor" systemColor="labelColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system"/>
+                                                <connections>
+                                                    <action selector="searchButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TEi-1c-Ivp"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -97,6 +100,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Rides" id="7dT-JG-66Y"/>
                     <connections>
+                        <outlet property="searchTextField" destination="LGD-Xc-chW" id="CRi-4u-LRV"/>
                         <outlet property="tableView" destination="E3Y-WG-kj0" id="OTv-nI-9Mx"/>
                         <segue destination="u5E-hd-dlh" kind="show" identifier="goToDetail" id="Tyk-51-vns"/>
                     </connections>
