--- a/Rides/View/Base.lproj/Main.storyboard
+++ b/Rides/View/Base.lproj/Main.storyboard
@@ -23,16 +23,16 @@
                                 <rect key="frame" x="15" y="118" width="363" height="690"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="d8n-iL-EFL" userLabel="TextfieldStack">
-                                        <rect key="frame" x="0.0" y="0.0" width="363" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="363" height="34.333333333333336"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Num to Query" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LGD-Xc-chW">
-                                                <rect key="frame" x="0.0" y="0.0" width="312.33333333333331" height="34"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="312.33333333333331" height="34.333333333333336"/>
                                                 <color key="backgroundColor" systemColor="systemFillColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IOA-XJ-S5I">
-                                                <rect key="frame" x="313.33333333333331" y="0.0" width="49.666666666666686" height="34"/>
+                                                <rect key="frame" x="313.33333333333331" y="0.0" width="49.666666666666686" height="34.333333333333336"/>
                                                 <color key="tintColor" systemColor="labelColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system"/>
@@ -43,25 +43,25 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="46" translatesAutoresizingMaskIntoConstraints="NO" id="8ml-4Z-Hpt">
-                                        <rect key="frame" x="0.0" y="54" width="363" height="30"/>
+                                        <rect key="frame" x="0.0" y="54.333333333333343" width="363" height="33.666666666666657"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Vehicle List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bti-uN-1x3">
-                                                <rect key="frame" x="0.0" y="0.0" width="158.66666666666666" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="158.66666666666666" height="33.666666666666664"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tlN-Dl-Isx">
-                                                <rect key="frame" x="204.66666666666663" y="0.0" width="158.33333333333337" height="30"/>
+                                                <rect key="frame" x="204.66666666666663" y="0.0" width="158.33333333333337" height="33.666666666666664"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort By:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5rU-4S-sKI">
-                                                        <rect key="frame" x="0.0" y="0.0" width="69" height="30"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="69" height="33.666666666666664"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="odJ-XK-ZEu">
-                                                        <rect key="frame" x="89.000000000000028" y="0.0" width="69.333333333333343" height="30"/>
+                                                        <rect key="frame" x="89.000000000000028" y="0.0" width="69.333333333333343" height="33.666666666666664"/>
                                                         <menu key="menu" id="oit-Xl-QD3">
                                                             <children>
                                                                 <command title="Item 1" id="fxL-M9-JhR"/>
@@ -74,9 +74,23 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" id="MDn-k7-t1H">
+                                        <rect key="frame" x="163" y="108" width="37" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </activityIndicatorView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="E3Y-WG-kj0">
-                                        <rect key="frame" x="0.0" y="104" width="363" height="586"/>
+                                        <rect key="frame" x="0.0" y="165" width="363" height="525"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" id="LtO-2I-IU9">
+                                                <rect key="frame" x="0.0" y="50" width="363" height="43.666667938232422"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LtO-2I-IU9" id="CRo-f0-Zal">
+                                                    <rect key="frame" x="0.0" y="0.0" width="363" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
                                     </tableView>
                                 </subviews>
                                 <constraints>
@@ -101,6 +115,7 @@
                     <navigationItem key="navigationItem" title="Rides" id="7dT-JG-66Y"/>
                     <connections>
                         <outlet property="searchTextField" destination="LGD-Xc-chW" id="CRi-4u-LRV"/>
+                        <outlet property="spinner" destination="MDn-k7-t1H" id="hE0-II-AYx"/>
                         <outlet property="tableView" destination="E3Y-WG-kj0" id="OTv-nI-9Mx"/>
                         <segue destination="u5E-hd-dlh" kind="show" identifier="goToDetail" id="Tyk-51-vns"/>
                     </connections>
@@ -121,7 +136,7 @@
                                 <rect key="frame" x="15" y="118" width="363" height="690"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="j3Q-Eo-lGc">
-                                        <rect key="frame" x="22" y="210.33333333333326" width="319.33333333333331" height="269.66666666666674"/>
+                                        <rect key="frame" x="22" y="210.33333333333329" width="319.33333333333331" height="269.66666666666674"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you see thie message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFv-W3-hWb">
                                                 <rect key="frame" x="0.0" y="0.0" width="281.33333333333331" height="33.666666666666664"/>
@@ -168,7 +183,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="Nng-0V-Q6y"/>
                     <connections>
+                        <outlet property="colorLabel" destination="dpq-wX-I1x" id="hQJ-Wd-Tp9"/>
                         <outlet property="mainView" destination="SJf-VH-dcJ" id="hTl-DR-Pfz"/>
+                        <outlet property="makeLabel" destination="uK3-YJ-jsa" id="zw5-pG-Yrx"/>
+                        <outlet property="typeLabel" destination="djK-rg-94f" id="Vzd-6Q-dAP"/>
+                        <outlet property="vinLabel" destination="SFv-W3-hWb" id="h41-bq-EHP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y1K-d8-ug0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
