Expanded the second page to display vehicle information and carbon emission

--- a/Rides/View/Base.lproj/Main.storyboard
+++ b/Rides/View/Base.lproj/Main.storyboard
@@ -133,31 +133,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SJf-VH-dcJ">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tJr-NL-N18">
                                 <rect key="frame" x="15" y="118" width="363" height="690"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <segue destination="Rnf-2G-ap4" kind="embed" id="0Ku-qM-uES"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="GbF-6m-qfw"/>
+                        <color key="backgroundColor" name="BgColor"/>
+                        <constraints>
+                            <constraint firstItem="tJr-NL-N18" firstAttribute="top" secondItem="GbF-6m-qfw" secondAttribute="top" constant="15" id="78H-qv-how"/>
+                            <constraint firstItem="tJr-NL-N18" firstAttribute="leading" secondItem="GbF-6m-qfw" secondAttribute="leading" constant="15" id="FPF-XB-AEa"/>
+                            <constraint firstItem="GbF-6m-qfw" firstAttribute="bottom" secondItem="tJr-NL-N18" secondAttribute="bottom" constant="10" id="nwF-XN-HrX"/>
+                            <constraint firstItem="GbF-6m-qfw" firstAttribute="trailing" secondItem="tJr-NL-N18" secondAttribute="trailing" constant="15" id="wSA-TN-EFL"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Nng-0V-Q6y"/>
+                    <connections>
+                        <outlet property="containerView" destination="tJr-NL-N18" id="XwI-A8-GWO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y1K-d8-ug0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1776.3358778625955" y="-35.211267605633807"/>
+        </scene>
+        <!--Page01 View Controller-->
+        <scene sceneID="Mlw-HH-l0J">
+            <objects>
+                <viewController storyboardIdentifier="Page01ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fej-Q0-9Rp" customClass="Page01ViewController" customModule="Rides" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="t5w-Zi-R6t">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jKK-hj-llk">
+                                <rect key="frame" x="15" y="74" width="363" height="734"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="j3Q-Eo-lGc">
-                                        <rect key="frame" x="22" y="210.33333333333329" width="319.33333333333331" height="269.66666666666674"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="7Lh-Rd-g1b">
+                                        <rect key="frame" x="22" y="232.33333333333329" width="319.33333333333331" height="269.66666666666674"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you see thie message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFv-W3-hWb">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you see thie message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u5X-y7-QlL">
                                                 <rect key="frame" x="0.0" y="0.0" width="281.33333333333331" height="33.666666666666664"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An error has occured" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uK3-YJ-jsa">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An error has occured" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tl1-Na-elU">
                                                 <rect key="frame" x="0.0" y="78.666666666666686" width="249.66666666666666" height="33.666666666666657"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please return and try again" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpq-wX-I1x">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please return and try again" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1uR-ie-IW9">
                                                 <rect key="frame" x="0.0" y="157.33333333333337" width="319.33333333333331" height="33.666666666666657"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or contact support" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="djK-rg-94f">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or contact support" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1U-h1-zYd">
                                                 <rect key="frame" x="0.0" y="236.00000000000006" width="227" height="33.666666666666686"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <nil key="textColor"/>
@@ -166,34 +200,63 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="page01Color"/>
                                 <constraints>
-                                    <constraint firstItem="j3Q-Eo-lGc" firstAttribute="centerY" secondItem="SJf-VH-dcJ" secondAttribute="centerY" id="0qN-hh-qDV"/>
-                                    <constraint firstItem="j3Q-Eo-lGc" firstAttribute="centerX" secondItem="SJf-VH-dcJ" secondAttribute="centerX" id="3Fh-kw-C60"/>
+                                    <constraint firstItem="7Lh-Rd-g1b" firstAttribute="centerY" secondItem="jKK-hj-llk" secondAttribute="centerY" id="60g-Kb-KJK"/>
+                                    <constraint firstItem="7Lh-Rd-g1b" firstAttribute="centerX" secondItem="jKK-hj-llk" secondAttribute="centerX" id="vdw-2A-ylh"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="GbF-6m-qfw"/>
-                        <color key="backgroundColor" name="BgColor"/>
+                        <viewLayoutGuide key="safeArea" id="Nku-2d-hGY"/>
+                        <color key="backgroundColor" name="page01Color"/>
                         <constraints>
-                            <constraint firstItem="GbF-6m-qfw" firstAttribute="trailing" secondItem="SJf-VH-dcJ" secondAttribute="trailing" constant="15" id="RB4-oC-9Vt"/>
-                            <constraint firstItem="SJf-VH-dcJ" firstAttribute="leading" secondItem="GbF-6m-qfw" secondAttribute="leading" constant="15" id="Ydf-Zg-HHu"/>
-                            <constraint firstItem="GbF-6m-qfw" firstAttribute="bottom" secondItem="SJf-VH-dcJ" secondAttribute="bottom" constant="10" id="ded-KO-kH6"/>
-                            <constraint firstItem="SJf-VH-dcJ" firstAttribute="top" secondItem="GbF-6m-qfw" secondAttribute="top" constant="15" id="wDL-DL-v4Y"/>
+                            <constraint firstItem="jKK-hj-llk" firstAttribute="top" secondItem="Nku-2d-hGY" secondAttribute="top" constant="15" id="QyY-eW-qAx"/>
+                            <constraint firstItem="Nku-2d-hGY" firstAttribute="trailing" secondItem="jKK-hj-llk" secondAttribute="trailing" constant="15" id="SCY-sc-Pkp"/>
+                            <constraint firstItem="jKK-hj-llk" firstAttribute="leading" secondItem="Nku-2d-hGY" secondAttribute="leading" constant="15" id="e51-D5-WWj"/>
+                            <constraint firstItem="Nku-2d-hGY" firstAttribute="bottom" secondItem="jKK-hj-llk" secondAttribute="bottom" constant="10" id="oLJ-ZP-YhT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Nng-0V-Q6y"/>
                     <connections>
-                        <outlet property="colorLabel" destination="dpq-wX-I1x" id="hQJ-Wd-Tp9"/>
-                        <outlet property="mainView" destination="SJf-VH-dcJ" id="hTl-DR-Pfz"/>
-                        <outlet property="makeLabel" destination="uK3-YJ-jsa" id="zw5-pG-Yrx"/>
-                        <outlet property="typeLabel" destination="djK-rg-94f" id="Vzd-6Q-dAP"/>
-                        <outlet property="vinLabel" destination="SFv-W3-hWb" id="h41-bq-EHP"/>
+                        <outlet property="colorLabel" destination="1uR-ie-IW9" id="Xe1-2Z-ynP"/>
+                        <outlet property="mainView" destination="jKK-hj-llk" id="tuc-JW-Y6s"/>
+                        <outlet property="makeLabel" destination="tl1-Na-elU" id="yS1-tJ-sKc"/>
+                        <outlet property="typeLabel" destination="v1U-h1-zYd" id="ZKJ-yg-pxV"/>
+                        <outlet property="vinLabel" destination="u5X-y7-QlL" id="EOS-V9-jdC"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="y1K-d8-ug0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wrs-LW-VmL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1776.3358778625955" y="-35.211267605633807"/>
+            <point key="canvasLocation" x="1774" y="616"/>
+        </scene>
+        <!--Page02 View Controller-->
+        <scene sceneID="8p3-2s-azT">
+            <objects>
+                <viewController storyboardIdentifier="Page02ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="32Q-LE-daf" customClass="Page02ViewController" customModule="Rides" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="do0-wF-Nvi">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Df7-NG-uZB">
+                                <rect key="frame" x="163.33333333333334" y="409.33333333333331" width="66.333333333333343" height="33.666666666666686"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="IPr-CC-lol"/>
+                        <color key="backgroundColor" name="page02Color"/>
+                        <constraints>
+                            <constraint firstItem="Df7-NG-uZB" firstAttribute="centerX" secondItem="do0-wF-Nvi" secondAttribute="centerX" id="Ilf-wA-RKV"/>
+                            <constraint firstItem="Df7-NG-uZB" firstAttribute="centerY" secondItem="do0-wF-Nvi" secondAttribute="centerY" id="UGp-Cz-CKi"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="CarbonEmissionLabel" destination="Df7-NG-uZB" id="y6t-qc-EA8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D2L-Cf-DDf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2466" y="615"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GTy-Vc-Ako">
@@ -213,11 +276,25 @@
             </objects>
             <point key="canvasLocation" x="338" y="-35"/>
         </scene>
+        <!--Content Page View Controller-->
+        <scene sceneID="aic-zK-xQ5">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Rnf-2G-ap4" customClass="ContentPageViewController" customModule="Rides" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q7n-ez-00t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2465" y="-35"/>
+        </scene>
     </scenes>
     <resources>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <namedColor name="BgColor">
             <color red="0.90600001811981201" green="0.9649999737739563" blue="0.94900000095367432" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="page01Color">
+            <color red="0.64705882349999999" green="0.78823529410000004" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <namedColor name="page02Color">
+            <color red="0.22352941179999999" green="0.35686274509999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
